# fastscnn_on_libtorch

./: CMakeLists.txt  README.md  algroth.cpp  camera_class.cpp  main.cpp  network.cpp  network.h  testtorch.cpp  to_pt.py  torch_demo.cpp  torch_demo.kdev4  torch_test2.cpp
CAMERA/: camera_class.cpp
SIGNET/: network.cpp  network.h  testtorch.cpp
